--- a/CINESTOP/css/style.css
+++ b/CINESTOP/css/style.css
@@ -8,12 +8,18 @@
         font-style: normal;
     }
 
-    
-
     span{
         color: goldenrod;
         font-style: normal;
     }
+
+    .banner-image {
+            width: 100%;
+            height: 570px;
+            max-width: 100%;
+            background-size: cover;
+            z-index: -99;
+        }
     /* END OF GENERAL */
 
     /* FONTS */
@@ -158,4 +164,44 @@
     }
 
 
-       
+    /* END OF ABOUT PAGE */
+
+    /* START OF CONTACT PAGE */
+
+    .contact-heading{
+        font-family: "Poppins", sans-serif;
+        font-weight: 500px;
+        font-style: normal;
+        font-size: 50px;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contact-main{
+        padding: 10px 150px 10px 100px;
+    }
+
+    .contact-right{
+        float: right;
+    }
+
+
+        .contact-left{
+        float: left;
+        width: 500px;
+    }
+
+    .contact-left-heading{
+        font-family: "Poppins", sans-serif;
+        font-weight: 300px;
+        font-style: normal;
+        font-size: 26px;
+        line-height: 10px;
+    }
+
+    .contact-left-para{
+        font-family: "Poppins", sans-serif;
+        margin-bottom: 50px;
+    }
+    
