--- a/CINESTOP/css/style.css
+++ b/CINESTOP/css/style.css
@@ -172,7 +172,7 @@
         font-family: "Poppins", sans-serif;
         font-weight: 500px;
         font-style: normal;
-        font-size: 50px;
+        font-size: 40px;
         padding: 20px;
         display: flex;
         justify-content: center;
@@ -205,3 +205,43 @@
         margin-bottom: 50px;
     }
     
+
+    /* MOVIE CARDS */
+
+    .movie-card-holder {
+        width: 200px;
+        height: 250px;
+        margin: 8px;
+        display: inline-block;
+        text-align: center;
+        transition: 0.5s;
+
+    }
+
+    .movie-card-holder img {
+        margin-top: -20px;
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+
+    }
+
+    .movie-card-holder h3 {
+        margin-top: 0px;
+        font-size: 16px;
+        font-weight: 500;
+        text-align: left;
+    }
+
+    .movie-card-holder:hover {
+        transform: scale(1.05);
+    }
+
+
+    .icon-lock {
+        position: absolute;
+        font-size: 40px;
+        margin-left: -115px;
+        margin-top: 85px;
+
+    }
